--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin:0;
     padding:0;
     font-family:'Avenir Next', Avenir, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    color: white;
 }
 
 html, body {
@@ -10,7 +11,7 @@ html, body {
 }
 
 html, body {
-    background: linear-gradient(#badbe4, #aaf7e1);
+    background: linear-gradient(#013220, #013220);
 }
 
 #world {
